--- a/lession6/src/App.css
+++ b/lession6/src/App.css
@@ -30,6 +30,7 @@
 .wrapper{
   display: inline-block;
 margin: 20px;
+position: relative;
 }
 .player{
   border: solid 1px black;
@@ -48,4 +49,19 @@ margin: 20px;
   font-size: 30px;
   background-color: antiquewhite;
   cursor: pointer;
+}
+.delbtn{
+  position: absolute;
+  font-size: 20px;
+  color: white;
+  border: #282c34 solid 1px;
+  background-color: black;
+  border-radius: 20px;
+  line-height: 20px;
+  width: 20px;
+  text-align: center;
+  top: -10px;
+  right: -10px;
+  cursor: pointer;
+  padding: 3px;
 }
